--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Website Builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-parallax-background mbr-after-navbar" id="header2-18" style="background-image: url(assets/images/background-2-2000x1264.png);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-parallax-background mbr-after-navbar" id="header2-18" style="background-image: url(assets/images/background-2-2000x1264.png);">
 
     <div class="mbr-overlay" style="opacity: 0.6; background-color: rgb(0, 0, 0);">
     </div>
@@ -95,7 +95,28 @@
         </div>
     </div>
 
-    <div class="mbr-arrow mbr-arrow-floating hidden-sm-down" aria-hidden="true"><a href="#features4-1g"><i class="mbr-arrow-icon"></i></a></div>
+    <div class="mbr-arrow mbr-arrow-floating hidden-sm-down" aria-hidden="true"><a href="#header3-1w"><i class="mbr-arrow-icon"></i></a></div>
+
+</section>
+
+<section class="mbr-section mbr-section__container article" id="header3-1w" style="background-color: rgb(0, 0, 0); padding-top: 60px; padding-bottom: 0px;">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <h3 class="mbr-section-title display-2">My Story (More About Me)</h3>
+                <small class="mbr-section-subtitle">"I have Autism, whats your superpower ?"</small>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="mbr-section article mbr-section__container" id="content1-1x" style="background-color: rgb(0, 0, 0); padding-top: 20px; padding-bottom: 20px;">
+
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 lead">When I was two years old, I was diagnosed with high-functioning autism. My parents were told that I would never go to regular school or get a high school diploma. Once my parents were told that I would never have a regular education, they knew to never give up on me and that they needed to prove many people wrong. After years of hardwork and dedication, I was able to overcome these obstacles and never gave up on anything that I set my mind to.</div>
+        </div>
+    </div>
 
 </section>
 
@@ -159,27 +180,6 @@
         
         
     </div>
-</section>
-
-<section class="mbr-section mbr-section__container article" id="header3-1w" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-12">
-                <h3 class="mbr-section-title display-2">My Story (More About Me)</h3>
-                <small class="mbr-section-subtitle">"I have Autism, whats your superpower ?"</small>
-            </div>
-        </div>
-    </div>
-</section>
-
-<section class="mbr-section article mbr-section__container" id="content1-1x" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
-
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-12 lead">When I was two years old, I was diagnosed with high-functioning autism. My parents were told that I would never go to regular school or get a high school diploma. Once my parents were told that I would never have a regular education, they knew that they would never give up on me and proving many people wrong. These obsticles allowed me to be the hardworking and dedicated person that I am today.&nbsp;</div>
-        </div>
-    </div>
-
 </section>
 
 
