--- a/reference.html
+++ b/reference.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-after-navbar" id="testimonials1-17" style="background-color: rgb(0, 0, 0); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-after-navbar" id="testimonials1-17" style="background-color: rgb(0, 0, 0); padding-top: 120px; padding-bottom: 120px;">
 
     
 
