--- a/word.html
+++ b/word.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">best web page design software download</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-22" style="background-color: rgb(0, 0, 0); padding-top: 140px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">simple drag and drop website building</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-22" style="background-color: rgb(0, 0, 0); padding-top: 140px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -82,7 +82,7 @@
                   
               </div>
               <div class="mbr-table-cell col-md-4">
-                  <div class="text-xs-center"><a class="btn btn-black" href="file:///E:/Julian%20Guas%20Portfolio/documents/Discuss%20IT%20Topic%206.pdf" target="_blank">Open PDF</a></div>
+                  <div class="text-xs-center"><a class="btn btn-black" href="julianguas.github.io/documents/Discuss IT Topic 6.pdf" target="_blank">Open PDF</a></div>
               </div>
             </div>
 
