--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-after-navbar" id="form1-15" style="background-color: rgb(0, 0, 0); padding-top: 120px; padding-bottom: 160px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-after-navbar" id="form1-15" style="background-color: rgb(0, 0, 0); padding-top: 120px; padding-bottom: 160px;">
     
     <div class="mbr-section mbr-section__container mbr-section__container--middle">
         <div class="container">
@@ -76,13 +76,13 @@
 
 
                     <div data-form-alert="true">
-                        <div hidden="" data-form-alert-success="true" class="alert alert-form alert-success text-xs-center">Thanks for filling out form!</div>
+                        <div hidden="" data-form-alert-success="true" class="alert alert-form alert-success text-xs-center">Your message has been sent!</div>
                     </div>
 
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="VdwbMWJev66tOGn6qRtaYu8p9QFfS0cHHmkMM/8ETna8XfeY88YTPL9S3+LRpZcZP86rtqxGvAbBHoGhv160oC6+rNE5M56t3a/wtT4ppc7TJQKyxuuZmJUOSAgCOe2R" data-form-email="true">
+                        <input type="hidden" value="ayUpqMt9Az7QcL87NtMJ1sELbyUtRlkbWL84YLb4tP5pZImSVmFfDJnl0lPrTDLC/IR8zTizJfyqn4G+nxkyj+D9m3hW6UYfHh2cu5VCb2lBxo2w0IhJvQDqDwCOuJ3d" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
@@ -114,7 +114,7 @@
                             <textarea class="form-control" name="message" rows="7" data-form-field="Message" id="form1-15-message"></textarea>
                         </div>
 
-                        <div><button type="submit" class="btn btn-danger">Send</button></div>
+                        <div><button type="submit" class="btn btn-black">Send</button></div>
 
                     </form>
                 </div>
