create github pages

--- a/photoshop.html
+++ b/photoshop.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Site Builder</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-1o" style="background-color: rgb(0, 0, 0); padding-top: 140px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-1o" style="background-color: rgb(0, 0, 0); padding-top: 140px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -546,9 +546,9 @@
                     </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item">
-                            <img alt="" src="assets/images/buster3-website-2000x20004.jpg">
+                            <img alt="" src="assets/images/buster3-website-2000x20008.jpg">
                         </div><div class="carousel-item">
-                            <img alt="" src="assets/images/buster-4-website-2000x20005.jpg">
+                            <img alt="" src="assets/images/buster-4-website-2000x20009.jpg">
                         </div><div class="carousel-item">
                             <img alt="" src="assets/images/rainbow-connection-website-2000x2000.jpg">
                         </div><div class="carousel-item">
@@ -566,7 +566,7 @@
                         </div><div class="carousel-item">
                             <img alt="" src="assets/images/julian-guas-perspective-imagery-website-2000x2000.jpg">
                         </div><div class="carousel-item">
-                            <img alt="" src="assets/images/project-3-illusion-2-website-2000x20006.jpg">
+                            <img alt="" src="assets/images/project-3-illusion-2-website-2000x200010.jpg">
                         </div><div class="carousel-item">
                             <img alt="" src="assets/images/1-website-1-2000x2000.jpg">
                         </div><div class="carousel-item">
@@ -678,7 +678,7 @@ Phone:<br><br></p>
                     <div hidden="" data-form-alert-success="true">Your message has been sent</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="VCv9FX6ai6FIPkBqNo8frRGynkDVerPEiBl+GJ/eb3e3eTZt39U4uGd1HRM132P7U964BzH6owIQAy4nXymWtG8w2H6sfnIKNP86YRAypxQAMH4z5sB10kFygdlK7WK6" data-form-email="true">
+                    <input type="hidden" value="RzC7ENUBax8fCg226yMx6+zjA7BadUjMqZF0Rty91cXMdBUdWsHLWBB2efP/B7FJ+LKBJIVWdRrs/fk28ErjGwIbxPst0ZKSaCD0O793xKoz97JIwfSrqRTdFJFssPcv" data-form-email="true">
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-2j-name">Name<span class="form-asterisk">*</span></label>
                         <input type="text" class="form-control input-sm input-inverse" name="name" required="" data-form-field="Name" id="contacts4-2j-name">
