--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Page Creator</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-3n" data-bg-video="https://www.youtube.com/embed/AeoKhcc1zsQ?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" style="padding-top: 200px; padding-bottom: 200px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-4l" data-bg-video="https://www.youtube.com/embed/AeoKhcc1zsQ?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" style="padding-top: 200px; padding-bottom: 200px;">
 
     <div class="mbr-overlay" style="opacity: 0.7; background-color: rgb(34, 34, 34);">
     </div>
@@ -76,7 +76,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container article" id="header3-4i" style="background-color: rgb(113, 102, 102); padding-top: 20px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section__container article" id="header3-4m" style="background-color: rgb(113, 102, 102); padding-top: 20px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -230,7 +230,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-8 col-md-offset-2 text-xs-center">
-                <h3 class="mbr-section-title display-2">FOLLOW US</h3>
+                <h3 class="mbr-section-title display-2">FOLLOW ME</h3>
                 <div>   <a class="btn btn-social" title="YouTube" target="_blank" href="https://www.youtube.com/channel/UCvZBPWDSTIk4oBoy99JS9Ow"><i class="socicon socicon-youtube"></i></a> <a class="btn btn-social" title="Instagram" target="_blank" href="https://instagram.com/mobirise/"><i class="socicon socicon-instagram"></i></a>      </div>
             </div>
         </div>
