--- a/photoshop.html
+++ b/photoshop.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-1o" style="background-color: rgb(0, 0, 0); padding-top: 140px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Site Builder</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-1o" style="background-color: rgb(0, 0, 0); padding-top: 140px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -467,9 +467,9 @@
                     </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item">
-                            <img alt="" src="assets/images/buster3-website-2000x20008.jpg">
+                            <img alt="" src="assets/images/buster3-website-2000x20000.jpg">
                         </div><div class="carousel-item">
-                            <img alt="" src="assets/images/buster-4-website-2000x20009.jpg">
+                            <img alt="" src="assets/images/buster-4-website-2000x20001.jpg">
                         </div><div class="carousel-item">
                             <img alt="" src="assets/images/rainbow-connection-website-2000x2000.jpg">
                         </div><div class="carousel-item">
@@ -487,7 +487,7 @@
                         </div><div class="carousel-item">
                             <img alt="" src="assets/images/julian-guas-perspective-imagery-website-2000x2000.jpg">
                         </div><div class="carousel-item">
-                            <img alt="" src="assets/images/project-3-illusion-2-website-2000x200010.jpg">
+                            <img alt="" src="assets/images/project-3-illusion-2-website-2000x20002.jpg">
                         </div><div class="carousel-item">
                             <img alt="" src="assets/images/bengal-tiger-website-1-2000x2000.jpg">
                         </div><div class="carousel-item">
@@ -592,7 +592,7 @@ Phone:<br><br></p>
                     <div hidden="" data-form-alert-success="true">Your message has been sent</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="0K96WPm7o3xOq5S2IKqVDxtrpIKrAIzGLoYyOdHzLBjr+1TLtD7t+fBsY0A1B89wQ2GCipDt34pewqbV5X/aMxqOVuWbavo/ijUT/jHOiE+m7WKxRP2MH7jtqqUjT3de" data-form-email="true">
+                    <input type="hidden" value="ajnwD/qqcjnoguvhKXWp1Q2r9XCIW9DNqfRFtJGC3YVmdyVSZ7Z0TZbYtfaPWA2hcsk/XVx0LAXNE8E99rdBdkbKRlM0AdvJtbgSWfWbLlnGKwr+PLP4ASexKnq3oZby" data-form-email="true">
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-2j-name">Name<span class="form-asterisk">*</span></label>
                         <input type="text" class="form-control input-sm input-inverse" name="name" required="" data-form-field="Name" id="contacts4-2j-name">
