--- a/reference.html
+++ b/reference.html
@@ -33,7 +33,7 @@
                 <div class="mbr-table-cell">
 
                     <div class="navbar-brand">
-                        <a href="index.html" class="navbar-logo"><img src="assets/images/logo-2-256x1284.jpg" alt="Mobirise"></a>
+                        <a href="index.html" class="navbar-logo"><img src="assets/images/logo-2-256x1289.jpg" alt="Mobirise"></a>
                         
                     </div>
 
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Maker</a></section><section class="mbr-section mbr-after-navbar" id="testimonials1-17" style="background-color: rgb(0, 0, 0); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Creator</a></section><section class="mbr-section mbr-after-navbar" id="testimonials1-17" style="background-color: rgb(0, 0, 0); padding-top: 120px; padding-bottom: 120px;">
 
     
 
@@ -150,7 +150,7 @@ Phone:<br><br></p>
                     <div hidden="" data-form-alert-success="true">Your message has been sent</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="ZfXqkjhcZ4X6kdZOwin9VR5PUf1rKQVkdL2p4GYdZmMQKFYw5fTqigoMzO5cE5GHEE1UPLHbGwqcOdnowM2qeeVxyCsSfaL3E3MDlzYGdUWdJtCiRAvK388M8TxSND1v" data-form-email="true">
+                    <input type="hidden" value="CC3MySyWlSVfOV9GOvMUv4HrnrqfE1dsiEckyb9x9e/79Vt0AtsSx6O0VGr5jgoSaje7HIxVtAvCwSOjU8r9YjR8nRIaONbixB4S9EYHWsPvTsLk7BZx+uGDzQKWAX7/" data-form-email="true">
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-2j-name">Name<span class="form-asterisk">*</span></label>
                         <input type="text" class="form-control input-sm input-inverse" name="name" required="" data-form-field="Name" id="contacts4-2j-name">
