--- a/biography.html
+++ b/biography.html
@@ -34,7 +34,7 @@
                 <div class="mbr-table-cell">
 
                     <div class="navbar-brand">
-                        <a href="index.html" class="navbar-logo"><img src="assets/images/logo-2-256x1284.jpg" alt="Mobirise"></a>
+                        <a href="index.html" class="navbar-logo"><img src="assets/images/logo-2-256x1289.jpg" alt="Mobirise"></a>
                         
                     </div>
 
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Page Generator</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-3v" style="background-color: rgb(193, 193, 193); padding-top: 0px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Generator</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-3v" style="background-color: rgb(193, 193, 193); padding-top: 0px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -191,7 +191,7 @@ Phone:<br><br></p>
                     <div hidden="" data-form-alert-success="true">Your message has been sent</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="tp7PE/rVvnFADXUp7/VlU8gyylRXoPrj6lUk+ty8Qp/1RGHpjeckCGCLniiB9j7QeE9gWpNQyzJtW1Yt/X/Pb8EIVlxRU+HAAJjZwTdIvK1iqIEQ0CLPCwNwFn2vMfSQ" data-form-email="true">
+                    <input type="hidden" value="Ph98Sc0c71Hqf1zyg3dl30z0JLeysdUY0f7rV7V89bMGNkmZKqsF36wCsPRteG+zGuLpGcOmAHzdqV7545omK8OMaHu3I69Ts+AS2B9eBeM9+J2YWgAMw/q16J+zrZpe" data-form-email="true">
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-2p-name">Name<span class="form-asterisk">*</span></label>
                         <input type="text" class="form-control input-sm input-inverse" name="name" required="" data-form-field="Name" id="contacts4-2p-name">
