--- a/illustrator.html
+++ b/illustrator.html
@@ -35,7 +35,7 @@
                 <div class="mbr-table-cell">
 
                     <div class="navbar-brand">
-                        <a href="index.html" class="navbar-logo"><img src="assets/images/logo-2-256x1284.jpg" alt="Mobirise"></a>
+                        <a href="index.html" class="navbar-logo"><img src="assets/images/logo-2-256x1289.jpg" alt="Mobirise"></a>
                         
                     </div>
 
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-1n" style="background-color: rgb(0, 0, 0); padding-top: 140px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Creator</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-1n" style="background-color: rgb(0, 0, 0); padding-top: 140px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -230,7 +230,7 @@
                         </div><div class="carousel-item">
                             <img alt="" src="assets/images/vw-logo-2-2000x2000.jpg">
                         </div><div class="carousel-item">
-                            <img alt="" src="assets/images/aruba-postcard-2-2000x20008.jpg">
+                            <img alt="" src="assets/images/aruba-postcard-2-2000x200013.jpg">
                         </div><div class="carousel-item">
                             <img alt="" src="assets/images/doodle-for-google-website-2000x2000-1.jpg">
                         </div><div class="carousel-item">
@@ -305,7 +305,7 @@ Phone:<br><br></p>
                     <div hidden="" data-form-alert-success="true">Your message has been sent</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="xuFhJ6w2PSrfOZeM8VnsthZO8+PhqLHcj3oBZ2R/nikkB4B4jzWKwO3hS60qgqSsLiszit9x8drlTCSGPpr86FXfqEi9I1WdMOH6JrZVC9cFXb9BXoCO7An1cbBC8C0c" data-form-email="true">
+                    <input type="hidden" value="B0RxJerIIXs972bemvcwOn/AgpdR6qDtdROd8guAXB0NaH5xrpOu02Xh2rWlGjAtq+hOvkv4FiPnMe9cKIuk9CI/uptCKmU4E4MZP8nWe5x/ehhXA50xTObSaa/zf2Sw" data-form-email="true">
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-2j-name">Name<span class="form-asterisk">*</span></label>
                         <input type="text" class="form-control input-sm input-inverse" name="name" required="" data-form-field="Name" id="contacts4-2j-name">
