--- a/premiere.html
+++ b/premiere.html
@@ -35,7 +35,7 @@
                 <div class="mbr-table-cell">
 
                     <div class="navbar-brand">
-                        <a href="index.html" class="navbar-logo"><img src="assets/images/logo-2-256x1284.jpg" alt="Mobirise"></a>
+                        <a href="index.html" class="navbar-logo"><img src="assets/images/logo-2-256x1289.jpg" alt="Mobirise"></a>
                         
                     </div>
 
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-1q" style="background-color: rgb(0, 0, 0); padding-top: 140px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Website Generator</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-1q" style="background-color: rgb(0, 0, 0); padding-top: 140px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -245,7 +245,7 @@ Phone:<br><br></p>
                     <div hidden="" data-form-alert-success="true">Your message has been sent</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="rRL8G/X72h83X0oT2w+LRoNmpQqcEH7XRYmIxQs4Nw25sLLnje7GPnB6HehvOVBpNYchuOeTBlNcMX4wYNqIW5An+n8oiIPB9FzCcqd99ljaFYRar9oWAtruz3NrvefG" data-form-email="true">
+                    <input type="hidden" value="7LA3PdElMvPE01MrSTCZqbMw48Vcu2vwvkoE9ZG45dV2e6y6q/+8a8SkF4YptZYE5aCIF3jMKECfv3EIBWCqvpqDKFwMuUpPSsBwh8SxTautFrhWBihoihEPUt8VwSEc" data-form-email="true">
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-2j-name">Name<span class="form-asterisk">*</span></label>
                         <input type="text" class="form-control input-sm input-inverse" name="name" required="" data-form-field="Name" id="contacts4-2j-name">
