--- a/timelapse.html
+++ b/timelapse.html
@@ -35,7 +35,7 @@
                 <div class="mbr-table-cell">
 
                     <div class="navbar-brand">
-                        <a href="index.html" class="navbar-logo"><img src="assets/images/logo-2-256x1284.jpg" alt="Mobirise"></a>
+                        <a href="index.html" class="navbar-logo"><img src="assets/images/logo-2-256x1289.jpg" alt="Mobirise"></a>
                         
                     </div>
 
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-39" style="background-color: rgb(0, 0, 0); padding-top: 120px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-39" style="background-color: rgb(0, 0, 0); padding-top: 120px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -281,7 +281,7 @@ Phone:<br><br></p>
                     <div hidden="" data-form-alert-success="true">Your message has been sent</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="a/FMVndFsKqpd8pTtz/H6PGIuwkX5YVHsbLfcYi2FtG8VV/MGhbuVDYKjTc6vM1cjOzgg7Q+6hA4/wbQ3kQ9kmMk0EIHSuuBA4nbQkC08lpCMp/UJ4MdZeoDsh4KxYP5" data-form-email="true">
+                    <input type="hidden" value="a1ImJh+aP1elNrimKoEH/gWQ5ADVMc3AJYBgX4EpacIHiBEr9aXZudAfwRFvSBJsTXMdijkYf6F2GmrDeANlz5X9nN9kSL0idlzZ3XdVy9d7WwCh5Rf3WVuE4Fn8FuKT" data-form-email="true">
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-35-name">Name<span class="form-asterisk">*</span></label>
                         <input type="text" class="form-control input-sm input-inverse" name="name" required="" data-form-field="Name" id="contacts4-35-name">
