create github pages

--- a/biography.html
+++ b/biography.html
@@ -34,7 +34,7 @@
                 <div class="mbr-table-cell">
 
                     <div class="navbar-brand">
-                        <a href="index.html" class="navbar-logo"><img src="assets/images/logo-2-256x12819.jpg" alt="Mobirise"></a>
+                        <a href="index.html" class="navbar-logo"><img src="assets/images/logo-2-256x1285.jpg" alt="Mobirise"></a>
                         
                     </div>
 
@@ -45,7 +45,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link" href="biography.html" aria-expanded="false">INTRODUCTION</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="index.html" aria-expanded="false" data-toggle="dropdown-submenu">APPLICATIONS</a><div class="dropdown-menu"><div class="dropdown"><a class="dropdown-item dropdown-toggle" href="123d.html" data-toggle="dropdown-submenu" aria-expanded="false">Creative Suite</a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="illustrator.html">Adobe Illustrator</a><div class="dropdown"><a class="dropdown-item dropdown-toggle" href="photoshop.html" data-toggle="dropdown-submenu" aria-expanded="false">Adobe Photoshop</a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="timelapse.html">Timelapse<br></a></div></div><a class="dropdown-item" href="premiere.html">Adobe Premiere</a><a class="dropdown-item" href="animate.html">Adobe Animate&nbsp;</a><a class="dropdown-item" href="dreamweaver.html">Adobe Dreamweaver&nbsp;</a></div></div><div class="dropdown"><a class="dropdown-item dropdown-toggle" href="123d.html" data-toggle="dropdown-submenu" aria-expanded="false">Microsoft Office</a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="word.html">Microsoft Word</a></div></div><a class="dropdown-item" href="123d.html">123D</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" aria-expanded="false" data-toggle="dropdown-submenu">CREDENTIALS</a><div class="dropdown-menu"><div class="dropdown"><a class="dropdown-item dropdown-toggle" href="#" data-toggle="dropdown-submenu" aria-expanded="false">Credentials</a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="julianguas.github.io/documents/Ai Certification.pdf" target="_blank">Adobe Illustrator</a></div></div><a class="dropdown-item" href="#">Resume<br></a><a class="dropdown-item" href="#">SAT</a><a class="dropdown-item" href="#">ACT</a></div></li><li class="nav-item"><a class="nav-link link" href="reference.html" aria-expanded="false">REFERENCE</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/" aria-expanded="false"></a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link" href="biography.html" aria-expanded="false">INTRODUCTION</a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="index.html" aria-expanded="true" data-toggle="dropdown-submenu">APPLICATIONS</a><div class="dropdown-menu"><div class="dropdown open"><a class="dropdown-item dropdown-toggle" href="123d.html" data-toggle="dropdown-submenu" aria-expanded="true">Creative Suite</a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="illustrator.html">Adobe Illustrator</a><a class="dropdown-item" href="photoshop.html" aria-expanded="false">Adobe Photoshop</a><a class="dropdown-item" href="premiere.html">Adobe Premiere</a><a class="dropdown-item" href="animate.html">Adobe Animate&nbsp;</a><a class="dropdown-item" href="dreamweaver.html">Adobe Dreamweaver&nbsp;</a></div></div><div class="dropdown"><a class="dropdown-item dropdown-toggle" href="123d.html" data-toggle="dropdown-submenu" aria-expanded="false">Microsoft Office</a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="word.html">Microsoft Word</a></div></div><a class="dropdown-item" href="123d.html">123D</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" aria-expanded="false" data-toggle="dropdown-submenu">CREDENTIALS</a><div class="dropdown-menu"><div class="dropdown"><a class="dropdown-item dropdown-toggle" href="#" data-toggle="dropdown-submenu" aria-expanded="false">Credentials</a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="julianguas.github.io/documents/Ai Certification.pdf" target="_blank">Adobe Illustrator</a></div></div><a class="dropdown-item" href="#">Resume<br></a><a class="dropdown-item" href="#">SAT</a><a class="dropdown-item" href="#">ACT</a></div></li><li class="nav-item"><a class="nav-link link" href="reference.html" aria-expanded="false">REFERENCE</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/" aria-expanded="false"></a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Site Builder</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-3v" style="background-color: rgb(193, 193, 193); padding-top: 0px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Builder</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-3v" style="background-color: rgb(193, 193, 193); padding-top: 0px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -186,7 +186,7 @@
                 <div class="col-xs-12 col-lg-10 col-lg-offset-1" data-form-type="formoid">
                     <div data-form-alert="true"><div hidden="" data-form-alert-success="true">Thank you for subscribing</div></div>
                     <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="SUBSCRIBE FORM">
-                        <input type="hidden" value="VPu2UvuYQviZ0EFJeUiuAQjCRn9LkYlbZJYY0zKRqLEHXMIp4eFR7VW5mdt7fWBeufe3nrwPtbuE647a+CzdGZk7XTXFPP4sG2UOdGA8WxwsJznnpU0+TF/QZ7XsDa7l" data-form-email="true">
+                        <input type="hidden" value="GRJBcUFmlMS80U3Q8kaHFn+SIwzZWH2s3fx5upI1Bj3JStBpUpmCFreSGFM6c3F+kIdaDJuGa4W5/s90rc4gIF5/qXw3r62PoIEPv+XmgOO6/c1T+CagIY13LKewLXcM" data-form-email="true">
                         <div class="mbr-subscribe mbr-subscribe-dark input-group">
                             <input type="email" class="form-control" name="email" required="" data-form-field="Email" placeholder="Enter Your Email Address..." id="form2-5a-email">
                             <span class="input-group-btn"><button type="submit" class="btn btn-black">SUBSCRIBE</button></span>
@@ -220,7 +220,7 @@ Phone:<br><br></p>
                     <div hidden="" data-form-alert-success="true">Your message has been sent</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="r3rxqVAyZ1QgVtFwL+dnmLy2V0BQdhTURmfyytV2VgSTe3XvfAdGRrAYV9R37+S8dKRUwzuorxZOG9Kws3nANqsaXHmsSnD4IvPkQMPALbEnCX3jggB1M/evLV8kTj49" data-form-email="true">
+                    <input type="hidden" value="Af6UMUxqAKk6u8nObLMyA+jm6rMY3ZLp5ufdJOQPNuVPqeYwIICtT2wK+HlR8vi4W1U6JPOW8NUPPHlTZxi/8+Z1lPxGj4LvsJA4ybSV1cMPApvbQodxz87h0NlvVZF3" data-form-email="true">
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-2p-name">Name<span class="form-asterisk">*</span></label>
                         <input type="text" class="form-control input-sm input-inverse" name="name" required="" data-form-field="Name" id="contacts4-2p-name">
